[gd_scene load_steps=16 format=2]

[ext_resource path="res://main/sys_parts/units/unit1/unit.gd" type="Script" id=1]
[ext_resource path="res://main/sys_parts/units/unit1/sprts.png" type="Texture" id=2]
[ext_resource path="res://main/sys_parts/boxes/hurt_box.gd" type="Script" id=3]
[ext_resource path="res://main/sys_parts/stats/stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://main/sys_parts/boxes/choice_area.tscn" type="PackedScene" id=5]

[sub_resource type="Shader" id=9]
code = "shader_type canvas_item;

uniform vec4 flash_color:hint_color=vec4(1.0);
uniform float flash_modifier : hint_range(0,1);

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb=mix(color.rgb,flash_color.rgb,flash_modifier);
	COLOR = color;
}"

[sub_resource type="ShaderMaterial" id=10]
shader = SubResource( 9 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 100, 256 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 100, 0, 100, 256 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ) ],
"loop": true,
"name": "right",
"speed": 60.0
} ]

[sub_resource type="CircleShape2D" id=11]
radius = 6.18

[sub_resource type="CircleShape2D" id=2]
radius = 200.0

[sub_resource type="CircleShape2D" id=1]
radius = 5.0

[sub_resource type="Animation" id=3]
resource_name = "att"
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.5, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "add_att_zone"
}, {
"args": [  ],
"method": "end_att"
} ]
}

[sub_resource type="CapsuleShape2D" id=12]
resource_local_to_scene = true
height = 30.0

[node name="kb" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="na" type="NavigationAgent2D" parent="."]
path_desired_distance = 5.0
target_desired_distance = 5.0
path_max_distance = 60.0
avoidance_enabled = true
radius = 5.0
neighbor_dist = 5.0
max_speed = 100.0

[node name="spr" type="AnimatedSprite" parent="."]
material = SubResource( 10 )
position = Vector2( 0, -19 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 6 )
animation = "right"
playing = true

[node name="stats" parent="." instance=ExtResource( 4 )]
m_he = 20.0

[node name="hurt_box" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource( 3 )

[node name="col" type="CollisionShape2D" parent="hurt_box"]
shape = SubResource( 11 )

[node name="Timer" type="Timer" parent="hurt_box"]

[node name="a" type="Area2D" parent="."]

[node name="c" type="CollisionShape2D" parent="a"]
shape = SubResource( 2 )

[node name="c" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="AP" type="AnimationPlayer" parent="."]
anims/att = SubResource( 3 )

[node name="attray" type="RayCast2D" parent="."]
enabled = true
collide_with_areas = true
collide_with_bodies = false

[node name="choice_area" parent="." instance=ExtResource( 5 )]

[node name="c" parent="choice_area" index="0"]
shape = SubResource( 12 )

[node name="s2" type="TextureRect" parent="."]
margin_left = -7.5
margin_top = 5.0
margin_right = 7.5
margin_bottom = 20.0
expand = true

[connection signal="area_entered" from="hurt_box" to="." method="_on_hurt_box_area_entered"]
[connection signal="invi_ended" from="hurt_box" to="hurt_box" method="_on_hurt_box_invi_ended"]
[connection signal="invi_started" from="hurt_box" to="hurt_box" method="_on_hurt_box_invi_started"]
[connection signal="timeout" from="hurt_box/Timer" to="hurt_box" method="_on_Timer_timeout"]
[connection signal="body_entered" from="a" to="." method="_on_a_body_entered"]
[connection signal="body_exited" from="a" to="." method="_on_a_body_exited"]

[editable path="choice_area"]
